--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@ TODO 2c
 Customize the .jumbotron class to have centered text instead of left-aligned
 Also change its bottom margin to 1%
 */
+.jumbotron{
+	text-align: center;
+	margin-bottom: 1%;
+}
 
 
 /*
@@ -14,8 +18,21 @@ Give the Watchlist items some styles:
 - a little bit of margin on the bottom and right edges
 - no padding
 */
+#section-watchlist li{
+	width: 160px;
+	margin-bottom: 10%;
+	margin-right: 10%;
+	padding: 0%;
 
 
+}	
+
+#section-watchlist button{
+	margin-top: 10px;	
+}
+#section-watchlist{
+	text-align: center;
+}
 /*
 TODO 2j
 The "I watched it" button should fill the entire width of its container, 
@@ -60,23 +77,3 @@ TODO 5
 Delete everything else below! 
 The Bootstrap classes have made this stuff no longer relevant
 */
-
-ul {
-	padding-left: 0px;
-}
-
-button:disabled {
-	opacity: 0.5;
-}
-
-button, input[type="submit"] {
-	padding: 10px;
-	background: orange;
-	border-width: 0px;
-	color: white;
-}
-
-#section-browse li {
-	margin-bottom: 40px;
-	list-style: none;
-}
